--- a/views/outputtemp.erb
+++ b/views/outputtemp.erb
@@ -18,35 +18,18 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
 
-    <title> Weather and News </title>
+      <title>Temp</title>
   </head>
   <body>
 
+      <h1>The weather in Chicago is  <%= @current_temperature%> </h1>
+      
+       
+      
+    
+   
 
-    <div class="container mt-5">
-        <form action = "/news">
-            
-            <center> 
-            <label>Enter the location</label>
-            </center>
-            <center>
-            <input type="location" name="qlocation">
-            </center>
-            </div>
-            <p> 
-            <center>
-            <button type="submit" class="btn btn-success">Go to News & Weather</button>
-            </center>
-            </p>
-        </form>
-    </div>
-
-
-
-
-
-
-    <!-- Optional JavaScript -->
+      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
