--- a/views/news.erb
+++ b/views/news.erb
@@ -25,12 +25,16 @@
         </center>
             
         </div>
+        
         <p>
         <center>
-         The current temperature is <%= @forecast["currently"]["temperature"].round %>°F 
-         </center>
-        </p>
+
+        The current temperature is <%= @forecast["currently"]["temperature"].round %>°F. 
      
+        
+        </center>
+        </p>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
